affiche les objet imbriquer

--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
     <div>
         <ul>
-            <li>gestion des élèves</li>
+            <li><a routerLink="eleves/all" >gestion des élèves</a></li>
         </ul>
     </div>
 </nav>
