affiche les objets imbriquer eleve.classe_d_ecole

--- a/frontEnd/src/app/components/eleve/get-all-eleve/get-all-eleve.component.html
+++ b/frontEnd/src/app/components/eleve/get-all-eleve/get-all-eleve.component.html
@@ -11,7 +11,7 @@
         <li>{{ eleve.lastName }}</li>
         <li>{{ eleve.firstName }}</li>
         <li>{{ eleve.moyenne }} de moyenne</li>
-        <li>{{ eleve.classe_d_ecole.numeroClasse }}</li>
+        <li>Classe numéro : {{ eleve.classe_d_ecole.numeroClasse }}</li>
         <!-- <li>{{  }}</li> -->
     </ul>
 </div>
