--- a/frontEnd/src/app/components/eleve/get-one-eleve/get-one-eleve.component.html
+++ b/frontEnd/src/app/components/eleve/get-one-eleve/get-one-eleve.component.html
@@ -1,1 +1,15 @@
-<p>get-one-eleve works!</p>
+<div>
+    <h1>Eleve </h1>
+    <pre>
+         <!-- pour debug dans html angular  -->
+        <!-- <span>{{eleve | json}}</span> -->
+    </pre> 
+
+    <div>
+        <h2>{{ eleve?.firstName }} {{ eleve?.lastName }}</h2>
+        <p>Moyenne générale : {{ eleve?.moyenne }}/20</p>
+        <p>Numéro de sa classe : {{ eleve?.classe_d_ecole?.numeroClasse }}</p>
+        <p>Moyenne générale de sa classe : {{ eleve?.classe_d_ecole?.moyenneClasse }}/20 </p>
+        <!-- <p *ngFor="let devoir_eleve of eleve.devoir_eleves"> {{ devoir_eleve?.note }} </p> -->
+    </div>
+</div>
