gestion d'erreur pour les components get-one-eleve et get-all-eleve

--- a/frontEnd/src/app/components/eleve/new-eleve/new-eleve.component.html
+++ b/frontEnd/src/app/components/eleve/new-eleve/new-eleve.component.html
@@ -18,6 +18,11 @@
             </select>
         </div> -->
 
+        <!-- <h1>My Application</h1>
+            <select [(ngModel)]="selectedValue">
+                <option *ngFor="let c of countries" [ngValue]="c">{{c.name}}</option>
+            </select> -->
+
         <button type="submit" class="" [disabled]="eleveForm.invalid">Soumettre</button>
     </form>
 </div>
