Mise en place d'un système de modification d'un élève, models/Eleve

--- a/frontEnd/src/app/components/eleve/get-all-eleve/get-all-eleve.component.html
+++ b/frontEnd/src/app/components/eleve/get-all-eleve/get-all-eleve.component.html
@@ -5,7 +5,7 @@
         
         <pre>
             <!-- pour debug dans html angular -->
-            <span>{{eleve | json}}</span>
+            <!-- <span>{{eleve | json}}</span> -->
         </pre> 
 
         <li>Nom : {{ eleve.lastName }}</li>
