--- a/frontEnd/src/app/components/eleve/get-one-eleve/get-one-eleve.component.html
+++ b/frontEnd/src/app/components/eleve/get-one-eleve/get-one-eleve.component.html
@@ -20,6 +20,10 @@
                 <li *ngFor="let devoir_eleve of eleve?.devoir_eleves"> {{ devoir_eleve?.note }} </li>
             </ul>
         </div>
+
+        <div>
+            <button (click)="onGetUpdateEleve(eleve._id)" >Modifier</button>
+        </div>
         
     </div>
 </div>
